fix: tag-input-text-align

--- a/src/TagInput/TagInput.scss
+++ b/src/TagInput/TagInput.scss
@@ -1,6 +1,7 @@
 .tag-input {
   display: block;
   position: relative;
+  text-align: left;
 
   &-label {
     display: block;
